syntax = "proto3";

option csharp_namespace = "PingServer";

package returnStatus;

service ReturnStatus {
  // Sends a greeting
  rpc RequestReturn (ReturnRequest) returns (ReturnReply);
}

message ReturnRequest {
  bool opponentHit = 1;
}

message ReturnReply {
  string message = 1;
}
